# Code-Challenge-Generator-backend

./: README.md  database.db  databases.db  pyproject.toml  server.py  vercel.json
src/: ai_generator.py  app.py  utils.py
src/database/: db.py  models.py
src/routes/: challenge.py
